# CyderVis

./: .gitignore  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: deploy.yml
docs/: .gitattributes  book.toml
docs/.github/workflows/: deploy.yml
docs/src/: SUMMARY.md  custom.css  cydervis_user_guide.md  getting_started.md  getting_started_linux.md  getting_started_windows.md  index.md
docs/src/getting_started/: getting_started.md
docs/theme/: theme.hbs
gdextension_can_io/: Cargo.toml  README.md
gdextension_can_io/examples/: gen_dbc.py  gen_imu_dbc.py  gen_temperature_sensor_dbc.py  imu.dbc  print_dbc_file.rs  sample.dbc  temperature_sensor.dbc
gdextension_can_io/src/: can_parser.rs  lib.rs
godot/: can_io.gdextension  can_io.gdextension.uid  icon.png.import  icon_flat.png.import  project.godot  screenshot.png.import
godot/addons/graph_2d/: graph_2d.gd  graph_2d.gd.uid  graph_2d.svg.import  plugin.gd.uid
godot/addons/graph_2d/custom_nodes/: axis.gd.uid  coordinate.gd.uid  grid.gd.uid  legend.gd  legend.gd.uid  plot_2d.gd.uid
godot/addons/graph_2d/custom_refcounted/: plot_item.gd  (+1 more)
godot/assets/: alert_handler.gd  alert_handler.gd.uid  status_bar.gd  status_bar.gd.uid
godot/assets/main/: can_format_button.gd  can_format_button.gd.uid  dbc_file_button.gd  dbc_file_button.gd.uid  main.tscn  main_theme.tres  pause_button.gd  pause_button.gd.uid  set_min_window_size.gd  set_min_window_size.gd.uid
godot/assets/plotting/: can_graph.gd  can_graph.gd.uid
godot/assets/tables/: table_button.tscn  table_cell.tscn  table_row.tscn
(+26 files in other folders)
