[package]
name = "gdextension_can_io"
version = "0.1.1"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"] # Compile this crate to a dynamic C library.

[dependencies]
godot = { version = "0.3.4", features = ["experimental-threads"] }
serde_json = "1.0.142"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
nb = "1.1.0"
can-dbc = "6.0.0"
crosscan = { git = "https://github.com/Cyborg-Dynamics-Engineering/cross-can" }
tokio = "1.47.1"
